    - ignore gconf errors when trying to read the proxy settings
      (LP: #436129)
  * fix some leftovers from the rename
  * softwarecenter/view/widgets/searchentry.py:
    - fix search icon not being displayed (thanks to Marcus Carlson
      and Matthew Joseph Mcgowan) LP: #437431
  * remove po/software-store.pot, we use po/software-center.pot now

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 25 Sep 2009 19:56:55 +0200

software-center (0.4.0) karmic; urgency=low

  [ Michael Vogt ]
  * renamed to "Ubuntu Software Center" and software-center (LP: #436648)
  
  [ Loïc Minier ]
  * data/ubuntu-software-store.desktop.in: add missing semi-colon at end of
    Categories.
  * Use https instead of http in Vcs-Bzr URL.

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 25 Sep 2009 17:34:34 +0200

software-store (0.3.10) karmic; urgency=low

  * disable borders around the (internal) notebook widgets
  * softwarestore/view/installedpane.py:
    - fix crash when now app_model is available yet (LP: #435464)
  * softwarestore/view/pendingview.py:
    - fix crash in cancel handling (LP: #435454)
  * softwarestore/view/appdetailsview.py:
    - add translator comment for the price (LP: #435405)
  * data/templates/AppDetailsView.html:
    - simplify the html, disable DnD (LP: #434236), thanks to
      Istvan Nyitrai
  * move common code into softwarepane.py
  * update license to GPLv3
  * update translators comment for "Ubuntu Software Store"

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 24 Sep 2009 18:56:42 +0200

software-store (0.3.9) karmic; urgency=low

  [ Michael Vogt ]
  * softwarestore/view/appdetailsview.py, data/templates/AppDetailsView.html:
    - add basic license information to each package
  * softwarestore/app.py:
    - set default focus on the search entry and focus categories
      ("departments") on key-down (LP: #433828)
  * data/templates/CategoriesView.html:
    - arrow key navigation added (thanks to Stuart Langridge)